@@ -474,7 +474,6 @@
   <block id="e4358de2a09588cec13214adc031a6e1" category="sidebar">Inicio rápido para migrar a Amazon EVS</block>
   <block id="b217f7353b9ad5ed58a9d5b9ee531f78" category="sidebar">Migrar a Amazon Elastic VMware Service</block>
   <block id="424013c53fd9187a66e051bb44ddaa34" category="doc">Soporte mejorado del asesor de migración para Amazon Elastic VMWare Service</block>
-  <block id="37ac2db5bb5bc7f50e3b58bbb706b64b" category="paragraph">El asesor de migración de Amazon Elastic VMware Service ahora admite la implementación y el montaje automáticos de su sistema de archivos Amazon FSx for NetApp ONTAP .  Esto le permite comenzar a implementar sus máquinas virtuales en FSx para sistemas de archivos ONTAP cuando se complete la migración al entorno de Amazon EVS.</block>
   <block id="93c34ab13f70b21f6935de45dacb9ae3" category="section-title">Calcule el ahorro de costos al migrar a Amazon Elastic VMware Service</block>
   <block id="b1da4fce8da5117e3a9e1041d1749074" category="paragraph">Ahora puede explorar los ahorros potenciales que obtendrá al migrar sus cargas de trabajo de VMware a Amazon Elastic VMware Service (EVS).  La calculadora de ahorros le permite comparar los costos de usar Amazon EVS con y sin Amazon FSx for NetApp ONTAP como almacenamiento subyacente.  La calculadora muestra ahorros potenciales en tiempo real a medida que ajusta las características de su entorno.</block>
   <block id="89737fdc47d2ffa6f11712bb340e2a19" category="summary">Calcule cuánto puede ahorrar al utilizar Amazon EVS con FSx para ONTAP.</block>
@@ -512,12 +511,10 @@
   <block id="9d310bdb300e7bb1ef7cd5e2fc08e57b" category="paragraph">Esta versión de BlueXP Workload Factory para VMware presenta varias mejoras en la experiencia del asesor de migración de Amazon EC2:</block>
   <block id="28ac5ecdafc5d6be71f28783b5d53cc6" category="paragraph">Esta versión de BlueXP Workload Factory para VMware presenta la siguiente mejora en la experiencia del asesor de migración de Amazon EC2:</block>
   <block id="962abee1b74c5d5ab5f9bd0c47cbb068" category="paragraph">La interfaz de usuario y la documentación de Workload Factory ahora usan "solo lectura" para referirse a los permisos de lectura y "lectura/escritura" para referirse a los permisos automatizados.</block>
-  <block id="50d3ff7077038387799b7b34d964df08" category="paragraph">BlueXP Workload Factory para VMware ahora es compatible con Amazon Elastic VMware Service.  Puede migrar rápidamente sus cargas de trabajo locales de VMware a Amazon Elastic VMware Service mediante el asesor de migración, lo que optimiza los costos y permite un mayor control sobre su entorno VMware sin necesidad de refactorizar o cambiar la plataforma de sus aplicaciones.</block>
   <block id="041a7335d4bfbe01ea8a2d2f780732b6" category="inline-link">Explore los ahorros de Amazon Elastic VMware Service con BlueXP Workload Factory</block>
   <block id="1a1b8cfea3181a2937851fe76b4862d4" category="paragraph"><block ref="1a1b8cfea3181a2937851fe76b4862d4" category="inline-link-rx"></block></block>
   <block id="2bbead322f2dd5c4a40fbd66537e304f" category="doc">BlueXP workload factory ahora Fábrica de cargas de trabajo de NetApp</block>
   <block id="9c80606adc6065bc48c6d99fbb8c3f1d" category="paragraph">BlueXP ha sido renombrado y rediseñado para reflejar mejor el papel que desempeña en la gestión de su infraestructura de datos. Como resultado, la BlueXP workload factory pasó a llamarse Fábrica de carga de trabajo de NetApp .</block>
-  <block id="b77ed2f5662201a26b98b92e98329049" category="section-title">Presentación del Centro de planificación de cargas de trabajo de VMware</block>
   <block id="2dd03fc740a72e1c5fc0daf9be122249" category="paragraph">El centro de planificación de cargas de trabajo de VMware le permite ver y administrar su inventario de máquinas virtuales y sus planes de migración desde un solo lugar.  Puede cargar y guardar múltiples inventarios de VM de diferentes entornos y comenzar a planificar una migración al servicio AWS EC2 o Amazon Elastic VMware para cualquiera de ellos.  También puede crear y guardar planes de migración de AWS EC2 o EVS.</block>
   <block id="420ac911d98022d5289d3f00ff38ea84" category="inline-link">Explorar el centro de planificación de cargas de trabajo de VMware</block>
   <block id="81ee9955f68100a5e460b3f794e65e9b" category="paragraph"><block ref="81ee9955f68100a5e460b3f794e65e9b" category="inline-link-rx"></block></block>
@@ -733,4 +730,9 @@
   <block id="3c031b939f6ec312ee601d021e7a6644" category="sidebar">Consola de NetApp</block>
   <block id="cc58d3a9b2264c4fd8cb1d3f61b90bdc" category="sidebar">Servicios de datos de NetApp</block>
   <block id="93ba13882942e9f41461a4867481e012" category="sidebar">Utilice el centro de planificación de VMware</block>
+  <block id="98d4c7385c3e640287a91e3032b576c3" category="paragraph">BlueXP Workload Factory para VMware ahora es compatible con Amazon Elastic VMware Service. Puede migrar manualmente sus cargas de trabajo de VMware locales a Amazon Elastic VMware Service, lo que optimiza los costos y permite un mayor control sobre su entorno VMware sin necesidad de refactorizar o cambiar la plataforma de sus aplicaciones.</block>
+  <block id="dcf522fe0928ea448e17a8ccb7b14d76" category="paragraph">NetApp Workload Factory ahora admite la implementación y el montaje automáticos de su sistema de archivos Amazon FSx for NetApp ONTAP .  Esto le permite comenzar a implementar sus máquinas virtuales en FSx para sistemas de archivos ONTAP cuando se complete la migración al entorno de Amazon EVS.</block>
+  <block id="74f9db7fefcf8c24332761c003d46a02" category="section-title">Presentamos el centro de planificación de cargas de trabajo de VMware</block>
+  <block id="c1ed477ef5d58aa5d9931821badda717" category="paragraph">BlueXP Workload Factory para VMware ahora le permite utilizar el asesor de migración de Amazon Elastic VMware Service para migrar rápidamente sus cargas de trabajo de VMware locales a Amazon Elastic VMware Service.  Después de crear un plan de migración utilizando el asesor de migración, este se guarda automáticamente en la lista de planes de migración en el centro de planificación.</block>
+  <block id="c2ec0e17d82dd73344c2ef80a6de22f1" category="paragraph"><block ref="c2ec0e17d82dd73344c2ef80a6de22f1" category="inline-link-rx"></block></block>
 </blocks>
