@@ -6,6 +6,6 @@
 
 === Presentamos el soporte del asesor de migración para Amazon Elastic VMWare Service
 
-BlueXP Workload Factory para VMware ahora es compatible con Amazon Elastic VMware Service.  Puede migrar rápidamente sus cargas de trabajo locales de VMware a Amazon Elastic VMware Service mediante el asesor de migración, lo que optimiza los costos y permite un mayor control sobre su entorno VMware sin necesidad de refactorizar o cambiar la plataforma de sus aplicaciones.
+BlueXP Workload Factory para VMware ahora es compatible con Amazon Elastic VMware Service. Puede migrar manualmente sus cargas de trabajo de VMware locales a Amazon Elastic VMware Service, lo que optimiza los costos y permite un mayor control sobre su entorno VMware sin necesidad de refactorizar o cambiar la plataforma de sus aplicaciones.
 
 https://docs.netapp.com/us-en/workload-vmware/launch-migration-advisor-evs-manual.html["Cree un plan de implementación para Amazon EVS utilizando el asesor de migración"]
